[tool.poetry]
name = "swimbetter"
version = "0.1.0"
description = ""
authors = ["Tommi Mosconi <tommi.mosconi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.4"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
